# yewoh

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.config/: config.toml
crates/bevy-client/: Cargo.toml
crates/bevy_fabricator/: Cargo.toml
crates/bevy_fabricator/src/: any.rs  document.rs  glam.rs  hot_reload.rs  humantime.rs  lib.rs  loader.rs  operations.rs  parser.rs  prefab.rs  string.rs  traits.rs  values.rs
crates/bevy_fabricator/testdata/: simple.fab
crates/client/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/assets/: map.rs  mod.rs  mul.rs  multi.rs  tiles.rs  uop.rs
crates/core/src/protocol/: any.rs  character.rs  chat.rs  client_version.rs  compression.rs  entity.rs  extended.rs  format.rs  input.rs  login.rs  map.rs  mobile.rs  mod.rs  sound.rs  ui.rs
crates/core/src/protocol/encryption/: blowfish.rs  blowfish_pass.rs  lobby_pass.rs  mod.rs  twofish.rs  twofish_pass.rs
crates/core/src/types/: fixed_string.rs  mod.rs
crates/default-game/: Cargo.toml
crates/default-game/migrations/: 20230409235556_init.down.sql  20230409235556_init.up.sql
crates/default-game/src/: accounts.rs  actions.rs  chat.rs  entities.rs  entity_events.rs  format.rs  gumps.rs  hues.rs  l10n.rs  lib.rs  npc.rs  reflect.rs  space.rs  time.rs
crates/default-game/src/accounts/: memory.rs  mod.rs  repository.rs  sql.rs
crates/default-game/src/activities/: butchering.rs  mod.rs
crates/default-game/src/activities/combat/: mod.rs  prefabs.rs
crates/default-game/src/activities/loot/: mod.rs
crates/default-game/src/ai/: mod.rs
crates/default-game/src/ai/behaviours/: mod.rs  wander.rs
crates/default-game/src/characters/: animation.rs  corpses.rs  mod.rs  paperdoll.rs  persistence.rs  player.rs  prefabs.rs
crates/default-game/src/commands/: destroy.rs  go.rs  info.rs  mod.rs  registration.rs  spawn.rs  test.rs
crates/default-game/src/data/: cities.rs  locations.rs  maps.rs  mod.rs  prefab.rs  prefabs.rs  skills.rs  static_data.rs
crates/default-game/src/data/prefab/: common.rs  inheritance.rs  mod.rs
crates/default-game/src/entities/: common.rs  context_menu.rs  interactions.rs  mod.rs  persistence.rs  position.rs  prefabs.rs  tooltips.rs
crates/default-game/src/gumps/: mod.rs  page_allocator.rs
crates/default-game/src/items/: common.rs  containers.rs  mod.rs  persistence.rs  prefabs.rs  tooltips.rs
crates/default-game/src/items/buildings/: doors.rs  mod.rs
crates/default-game/src/items/prefabs/: container.rs  mod.rs
crates/default-game/src/networking/: mod.rs
crates/default-game/src/persistence/: db.rs  de.rs  entity.rs  hierarchy.rs  mod.rs  prefab.rs  ser.rs
crates/default-game/src/spawners/: mod.rs
crates/default-game/src/worldgen/: doors.rs
crates/default-server/: Cargo.toml
crates/default-server/src/: lobby.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: async_runtime.rs  game_server.rs  gump_builder.rs  lib.rs  lobby.rs  math.rs  player_tcp.rs  remote_reflect.rs
crates/server/src/admin_http/: mod.rs
crates/server/src/http/: mod.rs
crates/server/src/world/: account.rs  character.rs  characters.rs  chat.rs  client.rs  combat.rs  connection.rs  delta_grid.rs  entity.rs  events.rs  gump.rs  hierarchy.rs  input.rs  item.rs  items.rs  map.rs  mod.rs  navigation.rs  net_id.rs  sound.rs  spatial.rs  time.rs  view.rs
crates/server/src/world/net/: combat.rs  connection.rs  entity.rs  mod.rs  owner.rs  update.rs  view.rs
data/: cities.yaml  locations.yaml  maps.yaml  skills.yaml  spawn_doors.yaml
data/entities/: gerome.fab  gerome.yaml  throne_room_rats.fab  throne_room_rats.yaml
data/prefabs/characters/: character.fab  corpse.fab  human.fab  humanoid.fab
data/prefabs/characters/creatures/: rat.fab  rat_butchering.fab  rat_loot.fab
data/prefabs/characters/players/: player.fab  player_human_female.fab  player_human_male.fab
data/prefabs/creatures/: rat.fab  rat.yaml
data/prefabs/items/: backpack.fab  frypan.fab  frypan.yaml  hair.fab  pickaxe.fab  test_pants.fab  test_shoes.fab  test_skirt.fab  test_top.fab
data/prefabs/items/buildings/doors/: door.fab
data/prefabs/items/consumables/meat/: raw_ribs.fab
data/prefabs/items/equipment/utensils/: butcher_knife.fab
data/prefabs/items/valuables/: gold.fab
data/prefabs/players/: player.fab  player_backpack.yaml  player_human_female.fab  player_human_female.yaml  player_human_male.fab  player_human_male.yaml
data/prefabs/spawners/: rat_spawner.fab  rat_spawner.yaml
