[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/default-game",
    "crates/default-server",
    "crates/bevy-client",
]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package]
"*" = { opt-level = 3 }
yewoh-bevy-client = { opt-level = 1 }
yewoh-client = { opt-level = 1 }
yewoh = { opt-level = 1 }
yewoh-default-game = { opt-level = 1 }
yewoh-default-server = { opt-level = 1 }
yewoh-server = { opt-level = 1 }
