[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/default-game",
    "crates/default-server",
    "crates/bevy-client",
]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package]
"*" = { opt-level = 3 }
yewoh-bevy-client = { opt-level = 1 }
yewoh-client = { opt-level = 1 }
yewoh = { opt-level = 1 }
yewoh-default-game = { opt-level = 1 }
yewoh-default-server = { opt-level = 1 }
yewoh-server = { opt-level = 1 }

[workspace.dependencies]
tokio = { version = "1.26.0", default-features = false }
serde = "1.0.159"
futures = "0.3.27"
anyhow = "1.0.70"
async-trait = "0.1.68"
log = "0.4.17"
bevy = { version = "0.10.0", default-features = false }
bevy_ecs = "0.10.0"
bevy_app = "0.10.0"
bevy_reflect = "0.10.0"
bevy_kira_audio = { version = "0.15.0", default-features = false }
bevy_egui = "0.20.2"
bevy_reflect_derive = "0.10.0"
bevy_prototype_debug_lines = "0.10.1"
bevy-inspector-egui = "0.18.1"
glam = "0.23.0"
rstar = "0.10.0"
bitflags = "2.0.2"
clap = "4.1.13"
serde_yaml = "0.9.19"
serde_json = "1.0.95"
axum = "0.6.12"
ctrlc = "3.2.5"
sqlx = "0.7.0-alpha.2"
bevy_time = "0.10.0"
serde_derive = "1.0.158"
erased-serde = "0.3.25"
shell-words = "1.1.0"
chrono = "0.4.24"
rand = "0.8.5"
humantime = "2.1.0"
humantime-serde = "1.1.1"
argon2 = "0.5.0"
password-hash = "0.5.0"
uuid = "1.3.1"
byteorder = "1.4.3"
flate2 = "1.0.25"
once_cell = "1.17.1"
strum = "0.24.1"
strum_macros = "0.24.3"
encode_unicode = "1.0.0"
md5 = "0.7.0"
egui = "0.21.0"
