[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/default-game",
    "crates/default-server",
    "crates/bevy-client",
]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package]
"*" = { opt-level = 3 }
yewoh-bevy-client = { opt-level = 1 }
yewoh-client = { opt-level = 1 }
yewoh = { opt-level = 1 }
yewoh-default-game = { opt-level = 1 }
yewoh-default-server = { opt-level = 1 }
yewoh-server = { opt-level = 1 }

[workspace.dependencies]
tokio = { version = "1.40.0", default-features = false }
serde = "1.0.210"
erased-serde = "0.4.5"
futures = "0.3.31"
anyhow = "1.0.89"
async-trait = "0.1.83"
tracing = "0.1.40"
bevy = { version = "0.14.2", default-features = false }
bevy_egui = "0.30.0"
bevy-inspector-egui = "0.26.0"
glam = "0.27.0"
rstar = "0.12.0"
bitflags = "2.6.0"
clap = "4.5.20"
serde_yaml = "0.9.33"
serde_json = "1.0.128"
axum = "0.7.7"
axum-server = "0.7.1"
ctrlc = "3.4.5"
sqlx = "0.8.2"
bevy_time = "0.14.2"
shell-words = "1.1.0"
chrono = "0.4.38"
rand = "0.8.5"
humantime = "2.1.0"
humantime-serde = "1.1.1"
argon2 = "0.5.3"
password-hash = "0.5.0"
uuid = "1.10.0"
byteorder = "1.5.0"
flate2 = "1.0.34"
once_cell = "1.20.2"
strum = "0.26.3"
strum_macros = "0.26.4"
encode_unicode = "1.0.0"
md5 = "0.7.0"
egui = "0.29.1"
