[package]
name = "yewoh-bevy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_egui = { workspace = true }
bevy_reflect_derive = { workspace = true }
bevy_prototype_debug_lines = { workspace = true }
bevy-inspector-egui = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
egui = { workspace = true }

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11"
]

[dependencies.bevy_kira_audio]
workspace = true
default-features = false
features = [
    "wav",
    "flac",
    "mp3",
    "ogg",
]

[features]
debug = ["bevy/dynamic_linking"]
