[package]
name = "bevy_fabricator"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
anyhow = { workspace = true }
smallvec = { workspace = true }
nom = { workspace = true }
humantime = { workspace = true, optional = true }

[dependencies.bevy]
workspace = true
default-features = false
features = [
    "bevy_asset",
]
