[package]
name = "yewoh"
description = "A protocol library for Ultima Online"
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
anyhow = "1.0.70"
flate2 = "1.0.25"
log = "0.4.17"
tokio = { version = "1.26.0", default_features = false, features = ["net", "io-util", "sync"] }
once_cell = "1.17.1"
bitflags = "2.0.2"
strum = "0.24.1"
strum_macros = "0.24.3"
encode_unicode = "1.0.0"
glam = "0.23.0"
md5 = "0.7.0"

