[package]
name = "yewoh"
description = "A protocol library for Ultima Online"
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, default_features = false, features = ["net", "io-util", "sync"] }
once_cell = { workspace = true }
bitflags = { workspace = true, features = ["serde"] }
strum = { workspace = true }
strum_macros = { workspace = true }
encode_unicode = { workspace = true }
glam = { workspace = true }
md5 = { workspace = true }
serde = { workspace = true, features = ["derive"] }

