[package]
name = "yewoh-default-game"
description = "A server implementation of Ultima Online"
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
yewoh-server = { path = "../server" }
tokio = { version = "1.26.0", default_features = false, features = ["fs", "net", "macros"] }
futures = "0.3.27"
anyhow = "1.0.70"
log = "0.4.17"
clap = "4.1.13"
async-trait = "0.1.68"
bevy_ecs = "0.10.0"
bevy_app = "0.10.0"
bevy_reflect = "0.10.0"
bevy_time = "0.10.0"
glam = "0.23.0"
serde = "1.0.158"
serde_derive = "1.0.158"
serde_yaml = "0.9.19"
erased-serde = "0.3.25"
shell-words = "1.1.0"
chrono = "0.4.24"
rand = "0.8.5"
humantime = "2.1.0"
humantime-serde = "1.1.1"
sqlx = { version = "0.7.0-alpha.2", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "chrono", "uuid", "json"] }
argon2 = "0.5.0"
password-hash = { version = "0.5.0", features = ["std"] }
uuid = { version = "1.3.1", features = ["serde"] }
