[package]
name = "yewoh-default-game"
description = "A server implementation of Ultima Online"
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
yewoh-server = { path = "../server" }
bevy_fabricator = { path = "../bevy_fabricator", features = ["humantime"] }
tokio = { workspace = true, default_features = false, features = ["fs", "net", "macros"] }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
bevy = { workspace = true, default-features = false }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
erased-serde = { workspace = true }
shell-words = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "chrono", "uuid", "json"] }
argon2 = { workspace = true }
password-hash = { workspace = true, features = ["std"] }
uuid = { workspace = true, features = ["serde"] }
smallvec = "1.13.2"
