[package]
name = "yewoh-default-server"
description = "A Yewoh server implementation which tries to match the official UO behaviour."
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
yewoh-server = { path = "../server" }
yewoh-default-game = { path = "../default-game" }
tokio = { version = "1.21.0", default_features = false, features = ["net", "rt-multi-thread"] }
clap = { version = "3.2.20", features = ["derive", "env"] }
async-trait = "0.1.57"
futures = "0.3.24"
anyhow = "1.0.64"
log = "0.4.17"
env_logger = "0.9.0"
bevy_ecs = "0.8.1"
bevy_app = "0.8.1"
axum = "0.6.0-rc.2"
