[package]
name = "yewoh-default-server"
description = "A Yewoh server implementation which tries to match the official UO behaviour."
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
yewoh-server = { path = "../server" }
yewoh-default-game = { path = "../default-game" }
tokio = { version = "1.26.0", default_features = false, features = ["net", "rt-multi-thread"] }
clap = { version = "4.1.13", features = ["derive", "env"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
serde_json = "1.0.95"
bevy = { version = "0.10.0", default_features = false }
async-trait = "0.1.68"
futures = "0.3.27"
anyhow = "1.0.70"
log = "0.4.17"
axum = "0.6.12"
glam = "0.23.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
