[package]
name = "yewoh-default-server"
description = "A Yewoh server implementation which tries to match the official UO behaviour."
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
yewoh-server = { path = "../server" }
yewoh-default-game = { path = "../default-game" }
tokio = { workspace = true, default_features = false, features = ["net", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
glam = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "chrono", "uuid", "json"] }

[dependencies.bevy]
workspace = true
default_features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_scene",
    "bevy_state",
    "multi_threaded",
    "sysinfo_plugin",
]
