[package]
name = "yewoh-server"
description = "A server implementation of Ultima Online"
authors = ["Erica Sian Taylor"]
repository = "https://github.com/ricky26/yewoh"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
yewoh = { path = "../core" }
tokio = { workspace = true, default_features = false, features = ["net"] }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bevy = { workspace = true, default-features = false }
glam = { workspace = true }
rstar = { workspace = true }
bitflags = { workspace = true }
